# resourcepool

./: .pre-commit-config.yaml  Cargo.toml  README.md  TODO.md  justfile
docs/: architecture.dia  dev-setup.md  pre-commit.md
scripts/: commit-msg-check.py
src/: client.rs  config.rs  inventory.rs  lib.rs  main.rs
src/client/: httpclient.rs  mod.rs
src/client/http/: mod.rs
tests/: config.rs  integration1.rs  inventory.rs  simple_inventory.yaml
