[package]
name = "rp"
version = "0.1.0"
edition = "2024"
[[bin]]
name = "server"
path = "src/server/bin/main.rs"

[[bin]]
name = "client"
path = "src/client/bin/main.rs"

[toolchain]
channel = "nightly-2025-12-08"
components = ["rustfmt", "clippy", "rust-analyzer"]

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
url = "1.7.2"
hyper = { version = "1.8.1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
